# GPU-Object-Detection-

./: .gitignore  QUICKSTART.md  README.md  README_MAHTI.md  Run Instructions.md  answers.txt  check_opencv_cuda.sh  detect_object_gpu.cpp  main_image_matching copy.py  main_image_matching.py  main_image_matching_gpu.py  main_video_detection_gpu.py  proposal.md  requirements.txt  run_single_image.sh  setup_mahti.sh  submit_gpu_job.sh
Working/: main_video_detection.py
gpu_implem/: CMakeLists.txt
gpu_implem/output/150/: output.json
gpu_implem/src/: main.cpp
src/: Makefile  benchmark.py  deviceQuery.cu  generate_multiple_templates.py  generate_samples.py  kernel.cu  main.cu  object_detector_cpu.py  object_detector_cupy.py  object_detector_gpu.py  setup_check.py  support.cu  support.h
templates/: README.md
test_images/: README.md
